rover_ws_ri/log/build_2023-04-21_17-47-11/locomotion_core/stderr.log
  File "/home/vboxuser/rover_ws_ri/install/locomotion_core/lib/python3.10/site-packages/locomotion_core/rover_state_controller.py", line 73
    global u_lx, u_az, joy_lx, joy_az, ply_lx, ply_az
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'u_lx' is assigned to before global declaration

